@@ -364,11 +364,21 @@ def get_source_options(asciidoc_file):
     result = []
     if os.path.isfile(asciidoc_file):
         options = ''
-        with open(asciidoc_file) as f:
+        with open(asciidoc_file, 'rb') as f:
+            line_number = 0
             for line in f:
-                mo = re.search(r'^//\s*a2x:', line)
+                line_number += 1
+                mo = re.search(b'^//\s*a2x:', line)
                 if mo:
-                    options += ' ' + line[mo.end():].strip()
+                    try:
+                        options += ' ' + line[mo.end():].strip().decode('ascii')
+                    except UnicodeDecodeError as e:
+                        #Encountered a problem decoding an option for a2x.
+                        #Discard this option and continue on with a warning.
+                        warning("Options must be in %s " % e.encoding  +
+                                "encoding: File '%s' " % asciidoc_file +
+                                "line number '%s' " %line_number       +
+                                "error '%s'." % e.reason)
         parse_options()
     return result
 
